--- a/ui/src/main/resources/static/assets/css/style.css
+++ b/ui/src/main/resources/static/assets/css/style.css
@@ -40,7 +40,7 @@
  *  23 - Back To Top CSS
  *  24 - Color CSS
  *  22 - Transition CSS
-¸ü¶à¾«Æ·BootstrapÄ£°åÇë·ÃÎÊ£ºhttp://www.bootstrapmb.com
+ï¿½ï¿½ï¿½à¾«Æ·BootstrapÄ£ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê£ï¿½http://www.bootstrapmb.com
  */
 /*-------------------------*/
 /* 00 - Common & Reset CSS
@@ -1943,7 +1943,7 @@ label{
     margin-bottom: 24px;
 }
 .checkout-login-form .login-btn {
-     width: 93px;
+  width: 93px;
   height: 45px;
   border-radius: 5px;
   text-transform: capitalize;
@@ -3161,4 +3161,19 @@ a,
 	font-size: 20px;
 	font-weight: 700;
 	color: #2959ad;
+}
+
+.login-upload-icon .login-upload-btn {
+    margin-left: 60px;
+    width: 110px;
+    height: 45px;
+    border-radius: 5px;
+    text-transform: capitalize;
+}
+
+.login-upload-icon .login-upload-icon-img {
+    width: 150px;
+    height: 150px;
+    margin-left: 50px;
+    border-radius: 5px;
 }
