index主页增加了查看所有商家

--- a/car_trade_project/ui/src/main/resources/static/assets/css/main.css
+++ b/car_trade_project/ui/src/main/resources/static/assets/css/main.css
@@ -1,6 +1,6 @@
 /*------------------------------------------------------------------
 [CocoTemplates]
-¸ü¶à¾«Æ·BootstrapÄ£°åÇë·ÃÎÊ£ºhttp://www.bootstrapmb.com
+ï¿½ï¿½ï¿½à¾«Æ·BootstrapÄ£ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê£ï¿½http://www.bootstrapmb.com
 Project:    Acropos - Car Dealer HTML Template
 Version:    1.1
 Last change:    25/Jan/2019
@@ -3373,7 +3373,7 @@ only screen and (min-resolution:192dpi) and (max-width:1024px) {
 	}
 
 	.testimonials .item {
-	    margin: 60px 15px 30px 15px;
+	    margin: 30px 15px 30px 15px;
 	    padding: 30px 30px 45px 30px;
 	    text-align: left;
 	    background-color: #f7f7f7;
